Add CTA and footer

--- a/index.html
+++ b/index.html
@@ -44,5 +44,20 @@
         <div class="author">-Thor, God of Thunder</div>
     </div>
 
+    <div class="ctacontainer">
+        <div class="cta">
+            <div class="ctaleft">
+                <div style="font-size: 24px; font-weight: bold; color: #e5e7eb">Call to action! It's time!</div>
+                <div style="font-size: 18px; color: #e5e7eb">Sign up for our product by clicking that button right over there!</div>
+            </div>
+
+            <button class="ctabutton">Sign up</button>
+        </div>
+    </div>
+
+    <div class="footer">
+        Copyright © The Odin Project 2021
+    </div>
+
 </body>
 </html>
